<resources>
    <string name="app_name">Omni_ofertas</string>
    <string name="email">example@gmail.com</string>
    <string name="registro">Registrarme</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="iniciarSesionGoogle">Iniciar sesión Google</string>
    <string name="confirmar">Confirmarl</string>
    <string name="confirmarGmail">Registrarme con Gmail</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Introduzca nombre</string>
    <string name="password_repetir">Repetir contraseña</string>
    <string name="apellidos">Introduzca apellidos</string>
    <string name="telefono">Introduzca número de telefono</string>
    <string name="logo">LOGO</string>
    <string name="limpiar">Limpiar</string>
    <string name="title_activity_menu_inicio">MenuInicio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="cerrar_sesion">Cerrar Sesión</string>

    <string name="prefs_file">com.example.omni_ofertas.PREFERENCE_FILE_KEY</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa_oferta">Map</string>
</resources>