<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/layout_fondo"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gHor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gVer4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />

    <EditText
        android:id="@+id/edEmail_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/EdMenu"
        android:autofillHints="@string/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/gHor2"

        app:layout_constraintEnd_toStartOf="@+id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@+id/gHor3" />

    <EditText
        android:id="@+id/edPass_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="@string/password"
        style="@style/EdMenu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/gHor1"
        app:layout_constraintEnd_toStartOf="@+id/gVer2"
        app:layout_constraintStart_toStartOf="@+id/gVer1"
        app:layout_constraintTop_toTopOf="@+id/gHor2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar_login"
        android:layout_width="120dp"
        android:layout_height="80dp"
        style="@style/BtMenu"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toTopOf="@+id/gHor4"
        app:layout_constraintEnd_toStartOf="@+id/gVer4"
        app:layout_constraintStart_toStartOf="@+id/gVer3"
        app:layout_constraintTop_toBottomOf="@+id/gHor4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btRegistro_login"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:text="@string/registro"
        style="@style/BtMenu"
        app:layout_constraintBottom_toTopOf="@+id/gHor5"
        app:layout_constraintEnd_toStartOf="@+id/gVer4"
        app:layout_constraintStart_toStartOf="@+id/gVer3"
        app:layout_constraintTop_toBottomOf="@+id/gHor5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="181dp"
        app:layout_constraintBottom_toTopOf="@+id/gHor3"
        app:layout_constraintEnd_toStartOf="@+id/gVer4"
        app:layout_constraintStart_toStartOf="@+id/gVer3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/etiqueta2"
        android:contentDescription="@string/logo"/>


</androidx.constraintlayout.widget.ConstraintLayout>